# perfectrag

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
docs/: addons.md  advisor.md  api.md  code-graph.md  deploy.md  eval.md  extensions.md  library.md  mcp.md  observability.md  retrieval.md  skills.md  stack-testing-findings.md  templates.md  ui.md
examples/: my_extensions.py
src/perfectrag/: __init__.py  addons.py  advisor.py  api_keys.py  cli.py  deployer.py  doctor.py  hardware.py  keys.py  mcp_registry.py  mcp_tools.py  orchestrate.py  query_api.py  recipes.py  scaffolder.py  skills.py  tune.py  webserver.py  wizard.py
src/perfectrag/core/: __init__.py  agent.py  evaluation.py  extensions.py  fusion.py  protocols.py  rag.py
src/perfectrag/core/embeddings/: __init__.py  jina_api.py  ollama.py  openai_api.py  st.py
src/perfectrag/core/llms/: __init__.py  anthropic_llm.py  gemini.py  llamacpp.py  ollama.py  openai_llm.py  vllm_http.py
src/perfectrag/core/parsers/: __init__.py  docling_p.py  markitdown_p.py  simple.py
src/perfectrag/core/rerankers/: __init__.py  colbert.py  cross_encoder.py
src/perfectrag/core/stores/: __init__.py  chroma.py  lancedb_store.py  milvus.py  pgvector.py  qdrant.py
src/perfectrag/deploy/: __init__.py
src/perfectrag/deploy/flyio/custom-naive-rag/: fly.toml.jinja
src/perfectrag/deploy/helm/custom-naive-rag/: Chart.yaml.jinja  values.yaml.jinja
src/perfectrag/deploy/helm/custom-naive-rag/templates/: app.yaml.jinja  ollama.yaml.jinja  qdrant.yaml.jinja
src/perfectrag/deploy/railway/custom-naive-rag/: railway.json.jinja
src/perfectrag/templates/_shared/addons/confluence-sync/: compose.confluence-sync.yml.jinja
src/perfectrag/templates/_shared/addons/confluence-sync/confluence-sync/: confluence_sync.py
src/perfectrag/templates/_shared/addons/context-eng/: compose.context-eng.yml.jinja
src/perfectrag/templates/_shared/addons/context-eng/context-eng/: Dockerfile  app.py  requirements.txt
src/perfectrag/templates/_shared/addons/eval/: compose.eval.yml.jinja
src/perfectrag/templates/_shared/addons/eval/eval/: Dockerfile  requirements.txt  runner.py
src/perfectrag/templates/_shared/addons/eval/eval/datasets/: sample-qa.jsonl
src/perfectrag/templates/_shared/addons/gdrive-sync/: compose.gdrive-sync.yml.jinja
src/perfectrag/templates/_shared/addons/gdrive-sync/gdrive-sync/: gdrive_sync.py
src/perfectrag/templates/_shared/addons/ingest-worker/: compose.ingest.yml.jinja
src/perfectrag/templates/_shared/addons/ingest-worker/ingest/: Dockerfile  config.yml.jinja  requirements.txt  runner.py
src/perfectrag/templates/_shared/addons/notion-sync/: compose.notion-sync.yml.jinja
src/perfectrag/templates/_shared/addons/notion-sync/notion-sync/: notion_sync.py
src/perfectrag/templates/_shared/addons/observability/: .env.observability.jinja  compose.observability.yml.jinja
src/perfectrag/templates/_shared/addons/observability/observability/: litellm-config.yaml.jinja
src/perfectrag/templates/_shared/addons/paperclip/: compose.paperclip.yml.jinja
src/perfectrag/templates/_shared/addons/paperclip/paperclip/: config.json.jinja
src/perfectrag/templates/_shared/skills/code-rag/: SKILL.md
src/perfectrag/templates/_shared/skills/legal-rag/: SKILL.md
src/perfectrag/templates/_shared/skills/medical-rag/: SKILL.md
src/perfectrag/templates/_shared/skills/research-rag/: SKILL.md
src/perfectrag/templates/code-graph-rag/: .gitignore.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja
src/perfectrag/templates/custom-naive-rag/: .env.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja  perfectrag.yml.jinja
src/perfectrag/templates/custom-naive-rag/app/: Dockerfile.jinja  main.py.jinja  requirements.txt.jinja
src/perfectrag/templates/custom-naive-rag/eval/datasets/: retrieval-golden.jsonl.jinja
src/perfectrag/templates/dify-stack/: .env.jinja  .gitignore.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja
src/perfectrag/templates/lightrag-stack/: .env.jinja  .gitignore.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja
src/perfectrag/templates/onyx-stack/: .env.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja
src/perfectrag/templates/r2r-stack/: .env.jinja  .gitignore.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja
src/perfectrag/templates/ragflow-stack/: .env.jinja  README.md.jinja  copier.yml  docker-compose.yml.jinja  mcp.yaml.jinja
tests/e2e/: test_scaffold.py
tests/fixtures/: agent-workflow.yml  graphrag.yml  qa-cpu.yml  qa-gpu-8gb.yml
tests/unit/: test_addons.py  test_advisor.py  test_api_keys.py  test_core_library.py  test_deployer.py  test_entry_points.py  test_eval_cli.py  test_evaluation.py  test_extensions.py  test_fusion.py  test_hardware.py  test_init_picker.py  test_keys.py  test_mcp_registry.py  test_mcp_tools.py  test_orchestrate.py  test_query_api.py  test_recipes.py  test_skills.py  test_tune.py  test_webserver.py
ui/: Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
ui/src/app/: layout.tsx  page.tsx
ui/src/app/dashboard/: page.tsx
ui/src/app/wizard/: page.tsx
