[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfectrag"
version = "0.1.0"
description = "Dynamic RAG framework scaffolder — wizard-driven, hardware-aware, docker-ready"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "perfectRAG" }]
keywords = ["rag", "graphrag", "scaffolder", "wizard", "docker", "mcp", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "InquirerPy>=0.3.4",
    "copier>=9.3",
    "jinja2>=3.1",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
    "py-cpuinfo>=9.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "distro>=1.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
perfectrag = "perfectrag.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/perfectrag"
Issues = "https://github.com/your-org/perfectrag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/perfectrag"]

[tool.hatch.build.targets.wheel.force-include]
"src/perfectrag/templates" = "perfectrag/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# B008 — Typer uses callable defaults as its idiom
# SIM105 — try/except/pass is clearer than contextlib.suppress here
# SIM117 — nested with-statements are sometimes clearer
# C401 — generator vs set comprehension nit
ignore = ["E501", "B008", "SIM105", "SIM117", "C401", "RUF012"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
