[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfectrag"
version = "1.3.1"
description = "RAG scaffolder + embedded library: 7 backbones incl. code-graph/R2R/Onyx, advanced retrieval (contextual, parent-doc, query-expansion+RRF, CRAG), scored advisor, SaaS Query API with auth + rate limit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "perfectRAG" }]
keywords = ["rag", "graphrag", "scaffolder", "wizard", "docker", "mcp", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "InquirerPy>=0.3.4",
    "copier>=9.3",
    "jinja2>=3.1",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
    "py-cpuinfo>=9.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "distro>=1.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
# Vector DB backends
qdrant   = ["qdrant-client>=1.9"]
milvus   = ["pymilvus>=2.4"]
chroma   = ["chromadb>=0.5"]
lancedb  = ["lancedb>=0.13"]
pgvector = ["psycopg[binary]>=3.2"]
# Embeddings / rerankers (heavy — needs torch)
embed-torch = [
    "sentence-transformers>=3.0",
]
# LLM runtimes
llamacpp = ["llama-cpp-python>=0.3"]
# Gemini advisor
advisor = ["google-generativeai>=0.7"]
# Convenience: full local stack
local-full = [
    "qdrant-client>=1.9",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "llama-cpp-python>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "markitdown>=0.0.1a2",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.scripts]
perfectrag = "perfectrag.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/perfectrag"
Issues = "https://github.com/your-org/perfectrag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/perfectrag"]
include = [
    "src/perfectrag/**/*.py",
    "src/perfectrag/templates/**/*",
    "src/perfectrag/deploy/**/*",
]
artifacts = [
    "src/perfectrag/templates/**/*",
    "src/perfectrag/deploy/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/perfectrag",
    "README.md",
    "pyproject.toml",
    "tests",
    "docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# B008 — Typer uses callable defaults as its idiom
# SIM105 — try/except/pass is clearer than contextlib.suppress here
# SIM117 — nested with-statements are sometimes clearer
# C401 — generator vs set comprehension nit
ignore = ["E501", "B008", "SIM105", "SIM117", "C401", "RUF012", "B904", "E402", "UP028", "B905", "RUF005", "RUF001"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
